--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "expo export -p web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@react-native-community/cli-platform-android": "^18.0.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-navigation/native": "^7.1.10",
@@ -20,8 +21,8 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.0",
     "form-data": "^4.0.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
@@ -29,8 +30,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-signature-canvas": "^4.7.4",
     "react-native-web": "^0.20.0",
-    "react-native-wheel-color-picker": "^1.3.1",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
