--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.0",
     "form-data": "^4.0.3",
-    "react": "^18.2.0",
+    "react": "19.0.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
